--- a/src/App.css
+++ b/src/App.css
@@ -278,7 +278,7 @@ input::placeholder{
   border-bottom-right-radius: 13px;
   /* position: fixed; */
   /* bottom: 0; */
-  transition:all 0.3s ease;
+  transition:all 0.3s ease !important;
 }
 
 .sidebar.open {
@@ -645,11 +645,18 @@ input[type="file"]::placeholder {
   border-radius: 2rem;
   width: auto;
   text-decoration: none;
+  transition: transform 0.3s ease;
+}
+
+.card:hover {
+  /* background-color: #0f0f0ff6; */
+  background-color: #000;
+  transform: scale(1.06);
 }
 
 .card-title {
   font-weight:800;
-  font-size: 32px;
+  font-size: 200%;
   color: #fff;
   /* font-weight: bolder; */
 }
@@ -658,7 +665,7 @@ input[type="file"]::placeholder {
   /* display: flex;
   justify-content: center;
   align-items: center; */
-  margin: 15% 0px 6% 0;
+  margin: 14% 0px 6% 0;
   width: 100%;
   height: 56px;
 }
@@ -670,7 +677,7 @@ input[type="file"]::placeholder {
   border-radius: 7rem;
   background-color: #6d6d6d;
   position: relative;
-  /* top: 56px; */
+  top: 6%;
   overflow: hidden;
 }
 
@@ -689,6 +696,7 @@ input[type="file"]::placeholder {
   /* position: relative; */
   /* top: 44px; */
   color: #eee;
+  margin-bottom: 3%;
 }
 
 .arrow-container {
@@ -700,7 +708,7 @@ input[type="file"]::placeholder {
   position: absolute;
   /* width: 50px; */
   height: 19px;
-  top: 86%;
+  top: 85%;
   right: 4%;
   bottom: 0;
   left: 0;
@@ -713,7 +721,7 @@ input[type="file"]::placeholder {
   position: absolute;
   /* top: 100px;
   left: 304px; */
-  width: 25%;
+  width: 21%;
   bottom: 0;
   right: 1%;
   top: 49.3%;
@@ -733,6 +741,202 @@ input[type="file"]::placeholder {
   right: 0;
 }
 
+.cards-link {
+  text-decoration: none;
+}
+
 /* html body div#root div.container-fluid div.row div.col-xl-12.col-lg-12.col-md-12.col-sm-12.col-12 div.content div.cards-container.container-fluid div#cardsRow.g-4.row.row-cols-md-2.row-cols-1 div.cards.col div.card div.card-body div.arrow-container svg.arrow-right path {
   width: 100px !important;
 } */
+
+.course-container {
+  overflow-x: scroll; /* Allow horizontal scrolling */
+  overflow-y: hidden; /* Hide the vertical scrollbar */
+  /* white-space: nowrap; Prevent wrapping of content */
+  scrollbar-width: none; /* Hide the scrollbar in Firefox */
+  -ms-overflow-style: none; /* Hide the scrollbar in Internet Explorer and Edge */
+}
+
+.course-container::-webkit-scrollbar {
+  display: none; /* Hide the scrollbar in WebKit browsers (like Chrome and Safari) */
+}
+
+.course-header {
+  margin-top: 1%;
+  font-weight: bold;
+  color: #7939FF;
+  font-size: 269%;
+  padding-left: 0px;
+  margin-left: 0px;
+  width: fit-content;
+  height: max-content;
+  text-align: center;
+}
+
+@media screen and (max-width: 768px) {
+  .course-header {
+    font-size: 191%;
+  }
+}
+
+.course-navbar {
+  background-color: transparent;
+  height: fit-content !important;
+  /* max-width: fit-content; */
+  /* max-width: max-content !important; */
+  /* max-width: 80%; */
+  position: relative;
+  /* right: 0;
+  left: 0; */
+  /* max-width: calc(100vw - 30%); */
+  white-space: nowrap; /* Prevent wrapping of content */
+}
+
+.courseRow1 {
+  margin-bottom: 0.6rem !important;
+  /* width: calc(100vw - 20%); */
+  min-width: 1250px;
+}
+
+.collapse-tabs {
+  width: 100%;
+  height: fit-content;
+}
+
+/* @media screen and (max-width: 920px) {
+  .courseRow1 {
+    width: calc(100vw);
+  }
+}
+
+@media screen and (max-width: 1180px) {
+  .courseRow1 {
+    width: 890px;
+  }
+}
+
+@media screen and (max-width: 1290px) {
+  .courseRow1 {
+    width: calc(100vw - 20vw) !important;
+  }
+}
+
+@media screen and (max-width: 1920px) {
+  .courseRow1 {
+    width: calc(100vw - 32.3vw);
+  }
+} */
+
+#nav-tabs {
+  width: 100%;
+  height: max-content;
+  /* margin-bottom: 5%; */
+  /* margin-top: 1%; */
+  /* text-align: center; */
+  /* display: flex; */
+  /* align-items: center; */
+  /* justify-content: center; */
+}
+
+.navtabs-container {
+  width: 100%;
+  height: max-content;
+}
+
+.collapse-tabs {
+  height: fit-content;
+  width: fit-content;
+}
+
+.course-navbar::after {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 2px; /* Adjust the height of the line as needed */
+  /* background-color: #ced4da; */
+  background-color: #808080;
+}
+
+/* .nav-line {
+  position: absolute;
+  height: 2px;
+  width: 100%;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  overflow: hidden;
+} */
+
+/* .nav-line::after {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #ced4da;
+} */
+
+/* @media screen and (max-width: 768px) {
+  .course-navbar::after {
+    width: 890px; /* Increase the height for smaller screens 
+  }
+} */
+
+.tab-link {
+  /* margin-top: 2%; */
+  font-weight: 600;
+  font-size: large;
+  color: #808080;
+  /* margin-right: 3%; */
+  /* padding: 0px 15%; */
+  text-align: center;
+  /* width: calc(100vw / 8); */
+  /* height: 36px; */
+  /* height: 36px; */
+  /* padding: 0 auto; */
+  /* margin-bottom: 0.6%; */
+  height: 2.5rem;
+}
+
+.tab-link.active {
+  position: relative;
+  color: #7939ff !important;
+}
+
+.tab-link.active::after {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  /* margin-left: 2%; */
+  height: 2px; /* Same height as the line */
+  background-color: #7939ff; /* Color of the line under the active tab */
+  /* margin-top: 0.6%; */
+  z-index: 300;
+}
+
+/* #tab2#tab3#tab4#tab5#tab6#tab7#tab8 {
+  margin-left: 3%;
+} */
+
+#tabz {
+  /* padding-left: 2%;
+  padding-right: 2%; */
+  /* margin: 0 2%; */
+  /* text-align: center;
+  display: flex;
+   */
+   padding: 0px !important;
+   /* margin-bottom: 0; */
+   width: 100%;
+}
+
+.courseRow2 {
+  position: fixed;
+  width: 100%;
+}
+
