--- a/src/App.css
+++ b/src/App.css
@@ -72,21 +72,38 @@ body{
 }
 
 
+.logo {
+  position: absolute;
+  /* display: flex;
+  justify-content: center;
+  align-items: center; */
+  width: 190px;
+  height: 100px;
+  z-index: 1000;
+  top: 4%;
+  left: 5%;
+}
+
 .SHAlogo {
   position: absolute;
   /* top: -252px;
   left: -606px; */
-  top: 30px;
+  /* top: 30px;
   left: 69px;
   font-weight: 700;
   font-style: normal;
-  font-size: 49px;
+  font-size: 49px;  */
 }
 
 @media screen and (max-width: 768px) {
+  .logo {
+    top: 1.5% !important;
+    left: 25.6% !important;
+    right: 0% !important;
+  }
   .contForm {
     max-width: 100% !important;
-    margin: 39% auto auto auto !important;
+    margin: 46% auto auto auto !important;
     /* display: flex;
     justify-content: center;
     align-items: center; */
