--- a/src/App.css
+++ b/src/App.css
@@ -364,7 +364,7 @@ input[type="password"] {
   width: 100%;
   /* min-width: 160px; */
   /* width: fit-content; */
-  height: calc(100vh - 80px);
+  height: calc(100vh - 102px);
   /* overflow-y: auto; */
   /* min-height: 100vh; */
   /* margin-top: 60px; */
@@ -380,8 +380,13 @@ input[type="password"] {
 .sideLinks{
   display: flex;
   color: #fff;
-  padding: 5% 8%;
-  margin-top: 7px;
+  /* padding: 5% 8%;
+  margin-top: 7px; */
+  align-items: center;
+  text-align: center;
+  font-size: 99%;
+  padding: 0% 2% 0% 13%;
+  margin-top: 1.83rem;
   gap: 10px;
   transition: all 0.1s;
   /* font-size: 26px; */
@@ -402,45 +407,79 @@ color: #7939FF !important;
 
 .sideLink {
   display: flex;
-  padding: 10px 0px 0px 0px;
-  margin-top: 7px;
+  /* padding: 10px 0px 0px 0px; */
+  /* margin-top: 7px; */
   /* gap: 15px; */
-  font-size: 101%;
+  font-size: 100%;
   text-decoration: none; 
 }
 
 @media screen and (max-width: 768px) {
   .sideLinks{
-    padding: 4% 0% 4% 11% !important;
+    padding: 0% 0% 0% 11% !important;
+    margin-top: 1.66rem !important;
+    gap: 6px !important;
+    font-size: 100% !important;
   }
   .sideLink {
-    font-size: 87% !important;
+    font-size: 88% !important;
   }
   .sideIcon {
-    font-size: 100% !important;
+    font-size: 101% !important;
+    /* padding: 7.3% 0px 0px 4% !important; */
+  }
+  .bars {
+    width: 3rem !important;
+  }
+  .userIconContainer {
+    right: 1rem !important;
+  }
+  .pfMenu {
+    font-size: 0.9rem !important;
+  }
+  .hrPfMenu {
+    margin: 7px 6px !important;
+  }
+  .logout-dropdown {
+    font-size: 1rem !important;
+    margin-right: 5px !important;
+    margin-bottom: 3px;
+  }
+  .dropdownMenu {
+    padding: 10px 0.69rem !important;
+    top: 3.193rem !important;
+  }
+  .navbar {
+    height: 3.9rem !important;
+  }
+  .sidebarContent {
+    height: calc(100vh - 89px);
   }
 }
 
 .sideIcon {
   display: flex;
-  padding: 7% 0px 0px 4%;
-  margin-top: 9px;
+  /* padding: 6.4% 0px 0px 4%; */
+  /* margin-top: 9px; */
   gap: 15px;
-  font-size: 111%;
+  /* font-size: 111%; */
   text-decoration: none; 
 }
 
 .bars {
   display: flex;
-  margin-left: 16px;
-  font-size: 31px;
-  /* width: 69px;
-  height: 36px; */
+  /* margin-left: 16px; */
+  align-items: center;
+  justify-content: center;
+  width: 4rem;
+  height: 2rem;
+  /* font-size: 200%; */
+  /* padding-left: 1rem; */
 }
 
 .barsIcon {
-  width: fit-content;
-  height: fit-content;
+  width: 100%;
+  height: 100%;
   cursor: pointer;
 }
 
@@ -456,13 +495,24 @@ color: #7939FF !important;
 
 .userIconContainer {
   position: relative;
-  right: 25px;
+  right: 27px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
   cursor: pointer;
+  width: 3.3rem;
+  height: 2.2rem;
+}
+
+.nav-pfPicture {
+  border-radius: 50%;
+  width: 2.2rem;
+  height: 100%;
 }
 
 .userChevron {
-  font-size: 16px;
-  padding: 1px;
+  font-size: 0.9rem;
+  /* padding: 1px; */
 }
 
 .userIcon {
@@ -2615,3 +2665,4 @@ iframe {
   font-weight: bold;
   font-size: 200%;
 }
+
